<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            xmlns:tools="http://schemas.android.com/tools"
            android:id="@+id/nav_graph"
            app:startDestination="@id/mainFragment">

    <fragment
            android:id="@+id/FirstFragment"
            android:name="udelp.edu.mx.agendakotlin.TareasFormFragment"
            android:label="@string/first_fragment_label"
            tools:layout="@layout/fragment_tareas_form">

        <action
                android:id="@+id/action_FirstFragment_to_SecondFragment"
                app:destination="@id/SecondFragment"/>
        <action android:id="@+id/action_FirstFragment_to_contactoFragment" app:destination="@id/contactoFragment"/>
    </fragment>
    <fragment
            android:id="@+id/SecondFragment"
            android:name="udelp.edu.mx.agendakotlin.TareasViewFragment"
            android:label="@string/second_fragment_label"
            tools:layout="@layout/fragment_tareas_view">

        <action
                android:id="@+id/action_SecondFragment_to_FirstFragment"
                app:destination="@id/FirstFragment"/>
        <action android:id="@+id/action_SecondFragment_to_mainFragment" app:destination="@id/mainFragment"/>
    </fragment>
    <fragment android:id="@+id/contactoFragment" android:name="udelp.edu.mx.agendakotlin.ContactoFragment"
              android:label="@string/list_contactos">
        <action android:id="@+id/action_contactoFragment_to_mainFragment" app:destination="@id/mainFragment"/>
    </fragment>
    <fragment android:id="@+id/mainFragment" android:name="udelp.edu.mx.agendakotlin.MainFragment"
              android:label="@string/mainActivity" tools:layout="@layout/fragment_main">
        <action android:id="@+id/action_mainFragment_to_SecondFragment" app:destination="@id/SecondFragment"/>
        <action android:id="@+id/action_mainFragment_to_contactoFragment" app:destination="@id/contactoFragment"/>
    </fragment>
</navigation>