<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                   xmlns:app="http://schemas.android.com/apk/res-auto"
                                                   xmlns:tools="http://schemas.android.com/tools"
                                                   android:layout_width="match_parent"
                                                   android:layout_height="match_parent"
                                                   tools:context=".OlvideConstrasenaFragment"
                                                   android:id="@+id/frameLayout2">
    <ImageView
            android:src="@drawable/registrar"
            android:layout_width="91dp"
            android:layout_height="82dp" android:id="@+id/imageView"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="26dp"
            app:layout_constraintTop_toTopOf="parent"/>

    <TextView
            android:text="Registrarse"
            android:layout_width="290dp"
            android:layout_height="35dp" android:id="@+id/textView2"
            android:textColor="@color/baby_blue" android:textAllCaps="true" android:textSize="25dp"
            android:textStyle="bold"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="32dp"
            tools:layout_editor_absoluteX="117dp"/>
    <EditText
            android:layout_width="341dp"
            android:layout_height="46dp"
            android:inputType="text"
            android:hint="@string/txt_nombre"
            android:ems="10"
            android:id="@+id/nombre"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="32dp" app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="90dp"/>

    <EditText
            android:layout_width="341dp"
            android:layout_height="46dp"
            android:inputType="text"
            android:hint="@string/txt_apellido_paterno"
            android:ems="10"
            android:id="@+id/apellidoPaterno"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="32dp" app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="160dp"/>

    <EditText
            android:layout_width="341dp"
            android:layout_height="46dp"
            android:inputType="text"
            android:hint="@string/txt_apellido_materno"
            android:ems="10"
            android:id="@+id/apellidoMaterno"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="32dp" app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="230dp"/>
    <EditText
            android:layout_width="341dp"
            android:layout_height="46dp"
            android:inputType="text"
            android:hint="@string/prompt_email"
            android:ems="10"
            android:id="@+id/email"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="32dp" app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="300dp"/>
    <EditText
            android:layout_width="341dp"
            android:layout_height="46dp"
            android:inputType="textPassword"
            android:hint="@string/prompt_password"
            android:ems="10"
            android:id="@+id/passwd"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="32dp" app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="370dp"/>
    <Button
            android:text="@string/btn_registrarse"
            android:layout_width="163dp"
            android:layout_height="64dp" android:id="@+id/btn_aceptar" tools:layout_editor_absoluteY="444dp"
            tools:layout_editor_absoluteX="124dp"/>



</androidx.constraintlayout.widget.ConstraintLayout>
