<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        tools:context=".ui.login.LoginActivity">

    <ImageView
            android:src="@drawable/perfil_del_usuario"
            android:layout_width="71dp"
            android:layout_height="66dp" android:id="@+id/imageView4"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="28dp"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="12dp"/>
    <EditText
            android:id="@+id/username"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="96dp"
            android:hint="@string/prompt_email"
            android:inputType="textEmailAddress"
            android:selectAllOnFocus="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

    <EditText
            android:id="@+id/password"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:hint="@string/prompt_password"
            android:imeActionLabel="@string/action_sign_in_short"
            android:imeOptions="actionDone"
            android:inputType="textPassword"
            android:selectAllOnFocus="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/username"/>

    <Button
            android:id="@+id/login"
            android:enabled="false"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="64dp"
            android:text="@string/action_sign_in"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/password"
            app:layout_constraintVertical_bias="0.173" app:layout_constraintHorizontal_bias="0.801"/>
    <ProgressBar
            android:id="@+id/loading"
            android:visibility="gone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="64dp"
            android:layout_marginBottom="64dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/password"
            app:layout_constraintStart_toStartOf="@+id/password"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.3"/>
    <Button
            android:text="@string/btn_registrarse"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/btn_register"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginTop="45dp" app:layout_constraintTop_toBottomOf="@+id/btn_passwd"
            app:layout_constraintVertical_bias="0.0"/>
    <Button
            android:text="@string/btn_olvide_passwd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/btn_passwd"
            android:layout_marginEnd="15dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginBottom="45dp"
            app:layout_constraintBottom_toTopOf="@+id/login" android:background="@android:color/transparent" android:textColor="@color/baby_blue"/>
    <TextView
            android:text="Inicio de Sesión"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/textView"
            android:textSize="25dp" android:textColor="@color/baby_blue" android:textStyle="bold"
            android:layout_marginEnd="72dp" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="24dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>